ready for launch

--- a/styles/bootstrap_overrides.scss
+++ b/styles/bootstrap_overrides.scss
@@ -74,7 +74,7 @@
 // $dark:          $gray-800 !default;
 
 $theme-colors: (
-  "primary": #CCCCCC
+  "primary": #892C2C
 );
 
 // $theme-colors: map-merge(
